force-app/main/default/objects/MUSW__License_Contact__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Checklists</description>
    <label>Answer</label>
    <referenceTo>BGCK__Answer__c</referenceTo>
    <relationshipLabel>License Contacts</relationshipLabel>
    <relationshipName>License_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>