force-app/main/default/objects/MUSW__License_Contact__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Checklist</description>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>License Contacts</relationshipLabel>
    <relationshipName>License_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>