force-app/main/default/objects/MUSW__License_Contact__c/fields/MUSW__Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Contact_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>