force-app/main/default/objects/MUSW__License_Contact__c/fields/MUSW__Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contact_Type__c</fullName>
    <description>License Contacts</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Interested Party</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>